tests/NormalTests/paczka1/small_fuzzy/45292869.err
Error in line 5: aEYO A775 36,2
Error in line 11: NaTwBDr A775 91,8
